# projetVAL

./: CMakeLists.txt  README.md
enc_temp_folder/7b4479249b6ecd18e4dab77f849cc/: projetVAL.cpp
enc_temp_folder/c17635bbe2cd9df6f057b6542bc1ca/: projetVAL.cpp
lib/: sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s.lib  sfml-window-s.lib
projetVAL/: CMakeLists.txt  projetVAL.cpp  projetVAL.h
